# fish-detection

./: README.md  dataset_custom.yaml  detector_v1.py  detector_v2.py  detector_v3.py  pyproject.toml  versions.py
runs/detect/train6/: args.yaml  results.csv
