[project]
name = "peixes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "label-studio>=1.20.0",
    "ultralytics>=8.3.182",
]

[project.optional-dependencies]
gpu = [
  "torch>=2.4", "torchvision>=0.19", "torchaudio>=2.4",
]
cpu = [
  "torch>=2.4", "torchvision>=0.19", "torchaudio>=2.4",
]

[tool.uv.sources]
# GPU: Windows/Linux x86_64/AMD64
torch = [
  { index = "pytorch-cu126", marker = "extra == 'gpu' and (sys_platform == 'win32' or sys_platform == 'linux') and (platform_machine == 'x86_64' or platform_machine == 'AMD64')" },
  # CPU: macOS/Windows/Linux — explicitamente exclui 'gpu' para ficar disjunto
  { index = "pytorch-cpu", marker = "extra == 'cpu' and extra != 'gpu' and (sys_platform == 'darwin' or sys_platform == 'win32' or sys_platform == 'linux')" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "extra == 'gpu' and (sys_platform == 'win32' or sys_platform == 'linux') and (platform_machine == 'x86_64' or platform_machine == 'AMD64')" },
  { index = "pytorch-cpu",  marker = "extra == 'cpu' and extra != 'gpu' and (sys_platform == 'darwin' or sys_platform == 'win32' or sys_platform == 'linux')" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "extra == 'gpu' and (sys_platform == 'win32' or sys_platform == 'linux') and (platform_machine == 'x86_64' or platform_machine == 'AMD64')" },
  { index = "pytorch-cpu",  marker = "extra == 'cpu' and extra != 'gpu' and (sys_platform == 'darwin' or sys_platform == 'win32' or sys_platform == 'linux')" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
